--- a/index.html
+++ b/index.html
@@ -28,33 +28,33 @@
         </div>
 
         <div class="col-md-6">
-          <div class="strummer" style="height: 40px; width: 100%; margin-bottom: 30px; background-color: black;" data-inversion="0"></div>
+          <div class="strum-bar" data-inversion="0"></div>
 
-          <div class="strummer" style="height: 40px; width: 100%; margin-bottom: 30px; background-color: black;" data-inversion="1"></div>
+          <div class="strum-bar" data-inversion="1"></div>
 
-          <div class="strummer" style="height: 40px; width: 100%; margin-bottom: 30px; background-color: black;" data-inversion="2"></div>
+          <div class="strum-bar" data-inversion="2"></div>
 
-          <div class="strummer" style="height: 40px; width: 100%; margin-bottom: 30px; background-color: black;" data-inversion="3"></div>
+          <div class="strum-bar" data-inversion="3"></div>
 
-          <div class="strummer" style="height: 40px; width: 100%; margin-bottom: 30px; background-color: black;" data-inversion="4"></div>
+          <div class="strum-bar" data-inversion="4"></div>
 
-          <div class="strummer" style="height: 40px; width: 100%; margin-bottom: 30px; background-color: black;" data-inversion="5"></div>
+          <div class="strum-bar" data-inversion="5"></div>
 
-          <div class="strummer" style="height: 40px; width: 100%; margin-bottom: 30px; background-color: black;" data-inversion="6"></div>
+          <div class="strum-bar" data-inversion="6"></div>
 
-          <div class="strummer" style="height: 40px; width: 100%; margin-bottom: 30px; background-color: black;" data-inversion="7"></div>
+          <div class="strum-bar" data-inversion="7"></div>
 
-          <div class="strummer" style="height: 40px; width: 100%; margin-bottom: 30px; background-color: black;" data-inversion="8"></div>
+          <div class="strum-bar" data-inversion="8"></div>
 
-          <div class="strummer" style="height: 40px; width: 100%; margin-bottom: 30px; background-color: black;" data-inversion="9"></div>
+          <div class="strum-bar" data-inversion="9"></div>
 
-          <div class="strummer" style="height: 40px; width: 100%; margin-bottom: 30px; background-color: black;" data-inversion="10"></div>
+          <div class="strum-bar" data-inversion="10"></div>
 
-          <div class="strummer" style="height: 40px; width: 100%; margin-bottom: 30px; background-color: black;" data-inversion="11"></div>
+          <div class="strum-bar" data-inversion="11"></div>
 
-          <div class="strummer" style="height: 40px; width: 100%; margin-bottom: 30px; background-color: black;" data-inversion="12"></div>
+          <div class="strum-bar" data-inversion="12"></div>
 
-          <div class="strummer" style="height: 40px; width: 100%; margin-bottom: 30px; background-color: black;" data-inversion="13"></div>
+          <div class="strum-bar" data-inversion="13"></div>
         </div>
 
       </div>
@@ -77,7 +77,7 @@
           }
         })
 
-        $('.strummer').on('mouseover', function() {
+        $('.strum-bar').on('mouseover', function() {
           if (typeof synth.oscillators !== 'undefined') {
             strumChord($(this).data('inversion'));
           }
