allows chord type to be changed

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         $('.chord-type-js').on('click', function() {
           $('.chord-type-js').removeClass('selected');
           $(this).addClass('selected');
+          synth.chordType = $(this).data('chord-type');
         });
 
         $('.strum-bar').on('mouseover', function() {
